<resources>
    <string name="app_name">s331392s344193mappe3comtobiasstrom</string>
    <string name="title_activity_maps">Skolebygg</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="roomNr">Romnummer</string>
    <string name="capasaty">Kapasitet</string>
    <string name="floor">Etasje</string>
    <string name="description">Beskrivelse</string>

    <!--formated strings som brukes for å skrive ut verdier til rommet -->
    <string name="roomNrOut">Romnummer: %1$s</string>
    <string name="capasatyOut">Kapasitet: %1$s</string>
    <string name="floorOut">Etasje: %1$s</string>
    <string name="descriptionOut">Beskrivelse: %1$s</string>

    <string name="meeting_end">Slutt tid</string>
    <string name="start_time">Start tid</string>

    <!--formated strings som brukes for å skrive ut verdier til møten -->
    <string name="meeting_startOut">Start tid: %1$s</string>
    <string name="meeting_endOut">Slutt tid: %1$s</string>

    <string name="addRom">Legg til rom</string>
    <string name="add">Legg til</string>
    <string name="next">neste</string>
    <string name="previous">forrige</string>
    <string name="create">Opprett</string>
    <string name="no_adress">Det er ingen addresse på dette stedet!</string>
    <string name="room">Rom</string>
    <string name="creare">Opprett</string>
    <string name="somthing_wrong_input">Her var det noe feil med inputen</string>
    <string name="fill_all_field">Du må fylle alle feiltene</string>
    <string name="only_number_letter">Tittel kan bare indeholde tall og bokstaver</string>
    <string name="opening_before">Åping må være før stenging</string>
    <string name="open_aftere_00">Du må åpne etter 00:00</string>
    <string name="not_open_after_23">Du kan ikke åpningstid etter 23</string>
    <string name="close_after_00">Du må stenge etter 00:00</string>
    <string name="close_before_23">DU må stenge før klokken er 23:00</string>
    <string name="description_only_letter_and_number">Beskrivelse kan bare indeholde tall og bokstaver</string>
    <string name="went_wrong">Noe gikk feil</string>
    <string name="greated_a_building">Du har opprettet en bygning</string>
    <string name="add_room">Legg til rom</string>
    <string name="min_floors">Det må være minst en etasje</string>
</resources>